--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Train Tracker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <!-- Moment.js Reference -->
     <script src="http://momentjs.com/downloads/moment.js"></script>  
 </head>
@@ -16,10 +16,10 @@
         <!-- Header -->
         <div class="row">
             <div class="col-md-12">
-                <div class="jumbotron jumbotron-fluid" id="jjjumbotron">
+                <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                        <h1 class="display-4">Train Scheduler</h1>
-                        <p>A Comprehensive Directory of Train Schedules</p>
+                        <h1 class="display-4">Train Schedule</h1>
+                        <p>Need to keep track of all your trains? Enter them here!</p>
                     </div>
                 </div>
             
